--- a/main_page/styles.css
+++ b/main_page/styles.css
@@ -26,7 +26,7 @@ div{
 
 #left{
     position: absolute;
-    left: 10vw;
+    left: 7vw;
     top: calc(50vh - 3.5vw);
     width: 7vw;
     transform: scaleX(-1);
@@ -36,7 +36,7 @@ div{
 
 #right{
     position: absolute;
-    right: 10vw;
+    right: 7vw;
     top: calc(50vh - 3.5vw);
     width: 7vw;
     transition: .5s ease;
@@ -56,7 +56,7 @@ div a{
   color:#000;
   display:block;
   height:15vw;
-  width:15vw;
+  width:20vw;
   padding:1vw;
 }
 
@@ -134,11 +134,24 @@ div .back{
 
 div a h2{
     margin: 0;
-    font-size: 1.5vw;
+    font-size: 1vw;
     font-weight: 600;
 }
 
-div a p{
-    margin: 0 30 0 0;
-    font-size: 1vw;
+div .front p{
+    margin: 0;
+    font-size: .5vw;
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
+    bottom:1vw;
+}
+
+div a img{
+    width:17vw;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    
 }
