--- a/main_page/styles.css
+++ b/main_page/styles.css
@@ -149,7 +149,7 @@ div .front p{
 
 div .back p{
     margin: .7vw 0 0 .5vw;
-    font-size: .8vw;
+    font-size: .75vw;
 }
 
 div .back ul li{
@@ -158,12 +158,12 @@ div .back ul li{
 
 
 div .back ul{
-    margin: .5vw 1vw 0 0;
-    font-size: .7vw;
+    margin: 1vw 1vw 0 0;
+    font-size: .65vw;
 }
 
 div .back ul ol{
-    font-size: .6vw;
+    font-size: .55vw;
     padding-left:1vw;
 }
 
