--- a/main_page/styles.css
+++ b/main_page/styles.css
@@ -220,3 +220,13 @@ div a img{
     width:60vw;
     z-index:0;
 }
+
+#seconds{
+    position: absolute;
+    z-index: 1;
+    top:2vw;
+    right:2vw;
+    font-size: 10vw;
+    margin: 0;
+    text-align: center;
+}
